@@ -1,3 +1,4 @@
+* FEA#9476 Itération sur la suppression du champ agence et le remplacement par distributeur
 * FEA#9349 Suppression du champ agence et le remplacer par le réseau de distribution
 * FEA#9492 Ajout d'un champ stocké pour le contrat commissionné
 * BUG#7515 Blocage de la création / modification manuelle des commissions
