@@ -1,3 +1,4 @@
+* FEA#9476 Iteration on remove of agency field and replace it by distributor
 * FEA#9349 Remove the field agency and replace it with the distribution network
 * FEA#9492 Add a stored field for the commissioned contract
 * BUG#7515 Block manual creation / modification of commissions
